Small modifications
